Fix header spacing issues

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -38,25 +38,21 @@ body {
 }
 
 .top-image {
-  position: relative;
   opacity: 0.6;
+  width: 100vw;
   height: 450px;
   margin: -10px 0 20px -10px;
-  background-repeat: no-repeat;
-  background-position-x: 35%;
-  background-position-y: 44%;
-  background-image: url("../images/ottawa-background.jpg");
+  object-fit: cover;
+  position: absolute;
 }
 
 .vertical-center {
   opacity: 0;
-  margin-top: -200px;
   position: absolute;
   top: 50%;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  animation: fadedowntitle 1s ease-out forwards;
+  animation: fadedown 1s ease-out forwards;
 }
 
 .vertical-center p,
@@ -76,6 +72,7 @@ body {
 .intro {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .title{
